# sim2real-6dof

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.wsl.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
annotations/: approved_mugs_with_handles.txt  canonical_keypoints.json
configs/: config.yaml  parallel-0.yaml  parallel-1.yaml  parallel-2.yaml  parallel-3.yaml
scripts/: archive.py  blender_interactive_annotator.py  blenderproc_init.py  canonicalize_models.py  curate_models.py  download_coco.py  download_dtd.py  download_modelnet.py  merge_dataset.py  setup.py  split_dataset.py  upload_to_hf.py  utils.py  validate_nocs_pose.py
src/: generate_data.py
src/sim2real_6dof/: generate_data.py  inference.py  train.py
src/sim2real_6dof/data/: dataset.py
src/sim2real_6dof/losses/: nocs_losses.py
src/sim2real_6dof/model/: nocs_head.py  nocs_maskrcnn.py
src/sim2real_6dof/training/: inference.py  train.py
src/sim2real_6dof/training/data/: dataset.py
src/sim2real_6dof/training/losses/: nocs_losses.py
src/sim2real_6dof/training/model/: nocs_maskrcnn.py
src/sim2real_6dof/utils/: pose_estimation.py  training_utils.py
src/training/: inference.py  test_pipeline.py  train.py
src/training/configs/: nocs_config.py  nocs_mrcnn_R50_FPN.yaml
src/training/data/: dataset.py  dataset_mapper.py  register_dataset.py
src/training/evaluation/: nocs_evaluator.py  pose_estimator.py
src/training/losses/: __init__.py  nocs_losses.py
src/training/model/: __init__.py  backbone.py  mask_head.py  nocs_head.py  nocs_maskrcnn.py  nocs_rcnn.py  roi_align.py  rpn.py
src/training/models/: nocs_head.py  nocs_rcnn.py
src/training/utils/: __init__.py  training_utils.py
