[project]
name = "sim2real-6dof"
version = "0.1.0"
description = "Sim to Real 6 degrees of freedom (6DOF) pose estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blenderproc>=2.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
train = "sim2real_6dof.training.train:main"
inference = "sim2real_6dof.training.inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim2real_6dof"]
