[project]
name = "sim2real-6dof"
version = "0.1.0"
description = "Sim to Real 6 degrees of freedom (6DOF) pose estimation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blenderproc>=2.8.0",
    "h5py>=3.15.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
    "requests>=2.32.5",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "trimesh>=4.10.0",
]

[project.scripts]
train = "sim2real_6dof.training.train:main"
inference = "sim2real_6dof.training.inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sim2real_6dof"]

[project.optional-dependencies]
cpu = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]
cu128 = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
# Use the default pypi index instead of https://download.pytorch.org/whl/cpu
# to prevent platform dependent dependency resolving issues
# (encountered when running within Docker on WSL on an x86_64 machine)
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
